    - use loop markers from sample file if loop_start and loop_end are
      not set in sfz file
    - implemeted filters. Filter types: lowpass, bandpass, bandreject
      and highpass. 1, 2, 4 and 6 pole filters. Opcodes: fil_type,
      cutoff, resonance, fil_veltrack, fil_keytrack, fil_keycenter,
      cutoff_cc, cutoff_chanaft.
    - bugfix: zero ampeg_sustain didn't work

  * SoundFont format engine:
    - Initial implementation (not usable yet)
    - RT-safeness: avoid malloc in audio thread
    - fixed a bug that could cause voice stealing to fail

  * Gigasampler format engine:
    - bugfix: pitch LFO controller "internal+aftertouch" was broken
    - bugfix: filter keyboard tracking was broken
    - filter performance fix (an unnecessary copy was made of the
      filter parameters in each sub fragment)

  * Host plugins:
    - AU bugfix: failed to destroy its audio/MIDI devices
    - Listen to all interfaces on Mac OS X (INADDR_ANY)
    - VST bugfix: If the host called resume() before and after
      changing sample rate or block size, the number of channels was
      incorrectly set to two. This caused silence in Cubase 5.
    - save engine type (gig, sfz or sf2) in plugin state
    - VST: when opening Fantasia, look for both 32 and 64 bit Java on
      64 bit Windows

  * MIDI driver:
    - ALSA MIDI driver supports now "NAME" device parameter, for overriding
      the ALSA sequencer client name
    - removed limit of maximum amount of MIDI ports per MIDI device, since
      there is no reason for this limit

  * audio driver:
    - ASIO driver fixes for newer gcc versions (fix from PortAudio)

  * LSCP server:
    - added support for sending MIDI CC messages via LSCP command
      "SEND CHANNEL MIDI_DATA CC <sampler-chan> <ctrl> <val>"
    - added LSCP command "GET AVAILABLE_EFFECTS"
    - added LSCP command "LIST AVAILABLE_EFFECTS"
    - added LSCP command "GET EFFECT INFO <effect-index>"